Lagt til navigasjon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     </style>
 </head>
 <body>
+    <div>
+        <a href="/index.html"></a>
+        <a href="/while.html"></a>
+        <a href="/shoppingcart.html"></a>
+        <a href="/løkkerTabeller.html"></a>
+        <a href="/oppgaveGangetabell.html"></a>
+    </div>
+
     <button onclick="forLøkkeFunkjsonIDK()">For-loop function idk</button>
     <div id="numbers"></div>
     <button onclick="countVowels('Klokken er for mange.')">Klokken er for mange.</button>
@@ -32,6 +40,7 @@
   &#x2191;
 </a>
 </body>
+
 <script>
     let reverseTxtCont = '';
     let fler;
