--- a/while.html
+++ b/while.html
@@ -12,6 +12,14 @@
     </style>
 </head>
 <body>
+    <div>
+        <a href="/index.html"></a>
+        <a href="/while.html"></a>
+        <a href="/shoppingcart.html"></a>
+        <a href="/løkkerTabeller.html"></a>
+        <a href="/oppgaveGangetabell.html"></a>
+    </div>
+
     <button onclick="generateTheNumbers()">Generer tall</button>
     <div id="equal"></div>
 </body>
