--- a/tallpuslespill.html
+++ b/tallpuslespill.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>Søke Start IT</title>
     <style>
-
+body{
+    user-select: none;
+}
         div {
             color: blue;
             background-color: azure;
