--- a/tallpuslespill.html
+++ b/tallpuslespill.html
@@ -24,6 +24,8 @@ body{
     </style>
 </head>
 <body>
+<div id="scree"></div>
+
     <div id="r1k1" onclick="trykk(this, 'r2k1', 'r1k2', '_', '_')">7</div>
     <div id="r1k2" onclick="trykk(this, 'r1k1', 'r2k2','r1k3')">1</div>
     <div id="r1k3" onclick="trykk(this, 'r1k2', 'r2k3')">2</div>
@@ -58,4 +60,23 @@ body{
 
     </script>
 </body>
+<script>
+    //Modell
+
+    //View
+    function updateView(){
+        document.getElementById('scree').innerHTML= /*HTML*/ `
+        <div id="r1k1" onclick="trykk(this, 'r2k1', 'r1k2', '_', '_')">7</div>
+        <div id="r1k2" onclick="trykk(this, 'r1k1', 'r2k2','r1k3')">1</div>
+        <div id="r1k3" onclick="trykk(this, 'r1k2', 'r2k3')">2</div>
+        <div id="r2k1" class="førstPåLinja" onclick="trykk(this, 'r2k2', 'r1k1', 'r3k1')">5</div>
+        <div id="r2k2" onclick="trykk(this, 'r2k1','r1k2','r2k3','r3k2')"></div>
+        <div id="r2k3" onclick="trykk(this, 'r1k3','r2k2','r3k3')">3</div>
+        <div id="r3k1" class="førstPåLinja" onclick="trykk(this, 'r2k1','r3k2' )">8</div>
+        <div id="r3k2" onclick="trykk(this, 'r3k1', 'r2k2', 'r3k3')">4</div>
+        <div id="r3k3" onclick="trykk(this, 'r3k2', 'r2k3' )">6</div>
+        `
+    }
+    //Controller
+</script>
 </html>
